AC_INIT([enigma2-plugin-extensions-subssupport], [1.5.4], [mx3ldev@gmail.com])

AM_INIT_AUTOMAKE
AC_PROG_CC
AM_PATH_PYTHON

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))

AC_CONFIG_FILES([
Makefile
plugin/Makefile
plugin/seekers/Makefile
plugin/seekers/Edna/Makefile
plugin/seekers/Itasa/Makefile
plugin/seekers/OpenSubtitles/Makefile
plugin/seekers/Podnapisi/Makefile
plugin/seekers/SerialZone/Makefile
plugin/seekers/Subscene/Makefile
plugin/seekers/SubtitlesGR/Makefile
plugin/seekers/Titlovi/Makefile
plugin/seekers/Titulky/Makefile
plugin/parsers/Makefile
plugin/img/Makefile
plugin/img/countries/Makefile
locale/Makefile

])
AC_OUTPUT
