SUBDIRS = parsers seekers img

installdir = $(libdir)/enigma2/python/Plugins/Extensions/SubsSupport
install_PYTHON = __init__.py compat.py e2_utils.py plugin.py process.py searchsubs.py seek.py subtitlesdvb.py subtitles.py utils.py
install_DATA = colors.txt keymap.xml ss_ply_FHD.png ss_ply_HD.png ss_set_FHD.png ss_set_HD.png ss_dwn_FHD.png ss_dwn_HD.png
